--- a/node-netflix-backend/package.json
+++ b/node-netflix-backend/package.json
@@ -8,7 +8,7 @@
   },
   "author": "",
   "dependencies": {
-    "@microsoft/microsoft-graph-client": "^2.0.0",
+    
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "connect": "^3.2.0",
@@ -23,11 +23,9 @@
     "log4js": "^6.2.1",
     "moment": "^2.26.0",
     "moment-timezone": "^0.5.31",
-    "msal": "^1.3.2",
     "mysql": "^2.18.1",
     "request": "^2.88.2",
-    "swagger-tools": "^0.10.4",
-    "twilio": "^3.45.0"
+    "swagger-tools": "^0.10.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
