--- a/react-netflix-frontend/package.json
+++ b/react-netflix-frontend/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
+    "@mui/styles": "^5.11.13",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -14,11 +15,14 @@
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
+    "framer-motion": "^10.3.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "mui-player": "^1.8.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
