--- a/node-netflix-backend/package.json
+++ b/node-netflix-backend/package.json
@@ -4,11 +4,11 @@
   "description": "used for backend netflix application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "",
   "dependencies": {
-    
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "connect": "^3.2.0",
