--- a/react-netflix-frontend/.env
+++ b/react-netflix-frontend/.env
@@ -1,5 +1,6 @@
 REACT_APP_API_BASE_URL = https://api.themoviedb.org/3/
 REACT_APP_API_TOEKN=a4ff7c24173459973ee581d00ef901af
+REACT_APP_AUTH_BASE_URL=http://localhost:5000/
 REACT_APP_FB_APP_ID=
 REACT_APP_GG_APP_ID=
 REACT_APP_AMAZON_APP_ID=
