--- a/react-netflix-frontend/jsconfig.json
+++ b/react-netflix-frontend/jsconfig.json
@@ -1,8 +1,9 @@
 {
-    "compilerOptions": {
-      "jsx": "react",
-      "checkJs": true,"module": "commonjs",
-      "target": "es6"
-    },
-    "exclude": ["node_modules", "**/node_modules/*"]
+  "compilerOptions": {
+    "checkJs": true,
+    "jsx": "preserve",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
+}
