--- a/react-netflix-frontend/package.json
+++ b/react-netflix-frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.17",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
@@ -19,6 +20,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mui-player": "^1.8.1",
+    "postcss": "^8.4.33",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,6 +31,7 @@
     "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
     "sass": "^1.59.2",
+    "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
