--- a/netflex-frontend/package.json
+++ b/netflex-frontend/package.json
@@ -20,7 +20,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-id-swiper": "^4.0.0",
     "react-table": "^7.8.0",
+    "swiper": "^11.0.5",
     "xlsx": "^0.18.5",
     "yup": "^1.3.3"
   },
