--- a/netflex-frontend/package.json
+++ b/netflex-frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "axios": "^1.6.7",
     "formik": "^2.4.5",
     "headlessui": "^0.0.0",
@@ -21,7 +22,10 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-id-swiper": "^4.0.0",
+    "react-slick": "^0.30.1",
     "react-table": "^7.8.0",
+    "react-toastify": "^10.0.4",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.0.5",
     "xlsx": "^0.18.5",
     "yup": "^1.3.3"
