--- a/react-netflix-frontend/package.json
+++ b/react-netflix-frontend/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mui-player": "^1.8.1",
+    "next": "^14.1.0",
     "postcss": "^8.4.33",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
